# testsql

./: CMakeLists.txt  Makefile  init.bat  read.py  run.bat  testsql.cpp
python/: read.py
